# VirtualDesk

./: .gitignore  LICENSE  Package.swift  README.md  package.json
Sources/CGVirtualDisplayBridge/: CGVirtualDisplayBridge.m
Sources/DeskBridge/: AccessibilityService.swift  AgentRuntime.swift  AgentStatus.swift  AppService.swift  DeskBridgeCLI.swift  DeskBridgeConfiguration.swift  DeskBridgeError.swift  JSONOutput.swift  MacDisplayService.swift  StopController.swift  VirtualDisplayService.swift  WindowGuardian.swift  WorkspaceOrchestrator.swift  main.swift
Sources/VirtualDesk/: AccessibilityService.swift  AgentLog.swift  AgentPresentationPolicy.swift  AgentProtocol.swift  AgentRuntime.swift  AgentStatus.swift  AppService.swift  ConfigurationStore.swift  ControlChannel.swift  DisplayArrangement.swift  DisplayService.swift  FramePolicy.swift  IORouter.swift  JSONOutput.swift  MacDisplayService.swift  ScreenCaptureService.swift  VirtualDeskAgent.swift  VirtualDeskCLI.swift  (+8 more)
scripts/: build-agent.sh  smoke-agent.js
src-tauri/: Cargo.toml  Info.plist  package-lock.json  package.json  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_manager.rs  lib.rs  main.rs  privacy.rs
src-ui/: index.html  package-lock.json  package.json
tools/: dump_cgvirtualdisplay.m  probe_cgvirtualdisplay_descriptor.m  probe_cgvirtualdisplay_init.m  probe_display_environment.m  probe_slvirtualdisplay.m  probe_slvirtualdisplay_capabilities.m  probe_slvirtualdisplay_dict.m  probe_slvirtualdisplay_mode.m  probe_slvirtualdisplay_mode_dict.m
(+13 files in other folders)
