[package]
name = "virtualdesk"
version = "0.1.0"
description = "VirtualDesk desktop shell"
authors = ["choco9527"]
edition = "2021"

[lib]
name = "virtualdesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
